--- a/src/app.css
+++ b/src/app.css
@@ -3,6 +3,11 @@ body {
   font-family: "Lato", sans-serif;
 }
 
+p {
+  margin: 0;
+  padding: 0;
+}
+
 .sidebar {
   margin: 0;
   padding: 0;
@@ -37,7 +42,7 @@ body {
 
 div.content {
   margin-left: 200px;
-  padding: 0px 16px;
+  padding: 20px 0px 0px 20px;
 }
 
 @media screen and (max-width: 700px) {
